Issue #SC-2128 feat: fixed akka configuration (#939)
* Issue #SC-2128 feat: fixed akka configuration